--- a/svelte/package.json
+++ b/svelte/package.json
@@ -5,11 +5,13 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "pnpm run build && pnpm exec gh-pages -d docs"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.20.4",
+		"gh-pages": "^6.0.0",
 		"svelte": "^4.0.5",
 		"vite": "^4.4.2"
 	},
