--- a/svelte/package.json
+++ b/svelte/package.json
@@ -6,7 +6,7 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"deploy": "pnpm run build && pnpm exec gh-pages -d build"
+		"deploy": "pnpm run build && pnpm exec gh-pages -d build -t true"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^2.0.3",
