--- a/svelte/package.json
+++ b/svelte/package.json
@@ -13,7 +13,8 @@
 		"@sveltejs/kit": "^1.20.4",
 		"gh-pages": "^6.0.0",
 		"svelte": "^4.0.5",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"vite-plugin-node-polyfills": "^0.15.0"
 	},
 	"type": "module",
 	"dependencies": {
